--- a/grb-tax-service/pom.xml
+++ b/grb-tax-service/pom.xml
@@ -59,6 +59,10 @@
 				spring-cloud-starter-netflix-eureka-client
 			</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
